--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -120,14 +120,14 @@
 <li>Po dokon&#269;en&iacute; stiskn&#283;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> nebo klikn&#283;te prav&yacute;m tla&#269;&iacute;tkem my&scaron;i a ukon&#269;ete n&aacute;stroj.</li></ol>
 <p><b>Krok C: P&#345;i&#345;azen&iacute; vazby vodorovn&eacute; vzd&aacute;lenosti</b>
 </p>
-<ol><li>Select the line defined by <b>P2</b> and <b>P3</b> in <b>Fig: MS3</b>. The labels like P1, P2 etc. will not appear in sketches, they were added for reference in the images of this tutorial.</li>
-<li>Click <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Horizontal distance constraint</a>:
-<ol><li>A dimension will appear between the endpoints of the selected line. This dimension is the current distance.</li>
-<li>Additionally a dialog will appear:<br><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pd_tut_rect03.png&amp;filetimestamp=20221214114118&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_rect03.png" decoding="async" width="305" height="169" class="mw-file-element" data-file-width="305" data-file-height="169"></a></span></li>
-<li>Assign <b>Length = 53 mm</b>.</li>
-<li>To be able to reference this dimension later a name is required. You are free to use any name, it need only be unique within the sketch. Assign <b>Name = length</b>.</li>
-<li>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
-<li>The result should resemble <b>Fig: MS4</b></li></ol>
+<ol><li>Vyberte linii definovanou body <b>P2</b> a <b>P3</b> na <b>Obr.: MS3</b>. Ozna&#269;en&iacute; jako P1, P2 atd. se ve skic&aacute;ch neobjev&iacute;, byla p&#345;id&aacute;na pouze pro orientaci v obr&aacute;zc&iacute;ch tohoto tutori&aacute;lu.</li>
+<li>Klikn&#283;te na <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Vazbu horizont&aacute;ln&iacute; vzd&aacute;lenosti</a>:
+<ol><li>Mezi koncov&yacute;mi body vybran&eacute; p&#345;&iacute;mky se zobraz&iacute; rozm&#283;r. Tento rozm&#283;r p&#345;edstavuje aktu&aacute;ln&iacute; d&eacute;lku.</li>
+<li>Nav&iacute;c se zobraz&iacute; dialogov&eacute; okno:<br><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pd_tut_rect03.png&amp;filetimestamp=20221214114118&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_rect03.png" decoding="async" width="305" height="169" class="mw-file-element" data-file-width="305" data-file-height="169"></a></span></li>
+<li>P&#345;i&#345;a&#271;te <b>D&eacute;lka = 53 mm</b>.</li>
+<li>Aby bylo mo&#382;n&eacute; na tento rozm&#283;r pozd&#283;ji odkazovat, je nutn&eacute; mu p&#345;i&#345;adit n&aacute;zev. M&#367;&#382;ete pou&#382;&iacute;t libovoln&yacute; n&aacute;zev, mus&iacute; b&yacute;t pouze jedine&#269;n&yacute; v r&aacute;mci v&yacute;kresu. P&#345;i&#345;a&#271;te <b>N&aacute;zev = d&eacute;lka</b>.</li>
+<li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
+<li>V&yacute;sledek by m&#283;l vypadat takto <b>Obr.: MS4</b></li></ol>
 <p><b>Step D: Assign a symmetrical constraint</b>
 </p>
 <ol><li>Select points <b>P2</b> and <b>P3</b> of the rectangle.</li>
@@ -403,12 +403,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120161407
+Cached time: 20260120162041
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.332 seconds
-Real time usage: 1.181 seconds
+CPU time usage: 0.278 seconds
+Real time usage: 0.507 seconds
 Preprocessor visited node count: 832/1000000
 Post&#8208;expand include size: 41803/2097152 bytes
 Template argument size: 11563/2097152 bytes
@@ -419,19 +419,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  176.586      1 -total
- 18.28%   32.287      1 Template:PartDesign_Tools_navi/cs
- 18.10%   31.967      1 Template:Userdocnavi/cs
- 13.54%   23.914      1 Template:Sketcher_Tools_navi/cs
- 10.80%   19.069      3 Template:Navigation_menu_2
-  7.47%   13.185      5 Template:Clear
-  7.04%   12.436      3 Template:CheckBox
-  6.89%   12.162     19 Template:Button
-  5.78%   10.208      1 Template:TutorialInfo
-  3.38%    5.964      8 Template:KEY
+100.00%   90.141      1 -total
+ 18.16%   16.370      1 Template:Sketcher_Tools_navi/cs
+ 17.26%   15.558      3 Template:Navigation_menu_2
+ 14.70%   13.251      1 Template:PartDesign_Tools_navi/cs
+ 13.62%   12.281      1 Template:Userdocnavi/cs
+  7.80%    7.031      1 Template:TutorialInfo
+  7.49%    6.756      3 Template:CheckBox
+  7.48%    6.741      7 Template:ComboBox
+  6.88%    6.205     19 Template:Button
+  6.48%    5.839      8 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120161405 and revision id 1741601. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120162040 and revision id 1741603. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
