--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -128,7 +128,7 @@
 <li>Aby bylo mo&#382;n&eacute; na tento rozm&#283;r pozd&#283;ji odkazovat, je nutn&eacute; mu p&#345;i&#345;adit n&aacute;zev. M&#367;&#382;ete pou&#382;&iacute;t libovoln&yacute; n&aacute;zev, mus&iacute; b&yacute;t pouze jedine&#269;n&yacute; v r&aacute;mci v&yacute;kresu. P&#345;i&#345;a&#271;te <b>N&aacute;zev = d&eacute;lka</b>.</li>
 <li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
 <li>V&yacute;sledek by m&#283;l vypadat takto <b>Obr.: MS4</b></li></ol>
-<p><b>Step D: Assign a symmetrical constraint</b>
+<p><b>Krok D: P&#345;i&#345;azen&iacute; symetrick&eacute; vazby</b>
 </p>
 <ol><li>Select points <b>P2</b> and <b>P3</b> of the rectangle.</li>
 <li>Select the <b>origin</b> of the sketch. Note: the selection order of the points is important.</li>
@@ -403,12 +403,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120162041
+Cached time: 20260120162217
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.278 seconds
-Real time usage: 0.507 seconds
+CPU time usage: 0.320 seconds
+Real time usage: 1.002 seconds
 Preprocessor visited node count: 832/1000000
 Post&#8208;expand include size: 41803/2097152 bytes
 Template argument size: 11563/2097152 bytes
@@ -419,19 +419,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   90.141      1 -total
- 18.16%   16.370      1 Template:Sketcher_Tools_navi/cs
- 17.26%   15.558      3 Template:Navigation_menu_2
- 14.70%   13.251      1 Template:PartDesign_Tools_navi/cs
- 13.62%   12.281      1 Template:Userdocnavi/cs
-  7.80%    7.031      1 Template:TutorialInfo
-  7.49%    6.756      3 Template:CheckBox
-  7.48%    6.741      7 Template:ComboBox
-  6.88%    6.205     19 Template:Button
-  6.48%    5.839      8 Template:KEY
+100.00%  173.473      1 -total
+ 58.97%  102.290      1 Template:Sketcher_Tools_navi/cs
+ 18.36%   31.857      1 Template:Userdocnavi/cs
+  8.55%   14.834      1 Template:PartDesign_Tools_navi/cs
+  5.42%    9.406      3 Template:Navigation_menu_2
+  3.95%    6.854      3 Template:CheckBox
+  2.25%    3.897      1 Template:TutorialInfo
+  1.58%    2.745     19 Template:Button
+  1.53%    2.661      7 Template:ComboBox
+  1.29%    2.238      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120162040 and revision id 1741603. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120162216 and revision id 1741605. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
