--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -130,10 +130,10 @@
 <li>V&yacute;sledek by m&#283;l vypadat takto <b>Obr.: MS4</b></li></ol>
 <p><b>Krok D: P&#345;i&#345;azen&iacute; symetrick&eacute; vazby</b>
 </p>
-<ol><li>Select points <b>P2</b> and <b>P3</b> of the rectangle.</li>
-<li>Select the <b>origin</b> of the sketch. Note: the selection order of the points is important.</li>
-<li>Click <span typeof="mw:File"><a href="../Sketcher_ConstrainSymmetric.html" title="Sketcher ConstrainSymmetric"><img src="../File/Sketcher_ConstrainSymmetric.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainSymmetric.html" title="Sketcher ConstrainSymmetric">Symmetrical constraint</a>.</li>
-<li>You will end up with something that resembles <b>Fig: MS5</b>.</li></ol>
+<ol><li>Vyberte body <b>P2</b> a <b>P3</b> obd&eacute;ln&iacute;ku.</li>
+<li>Vyberte <b>po&#269;&aacute;tek</b> n&aacute;&#269;rtu. Pozn&aacute;mka: po&#345;ad&iacute; v&yacute;b&#283;ru bod&#367; je d&#367;le&#382;it&eacute;.</li>
+<li>Klikn&#283;te na <span typeof="mw:File"><a href="../Sketcher_ConstrainSymmetric.html" title="Sketcher ConstrainSymmetric"><img src="../File/Sketcher_ConstrainSymmetric.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainSymmetric.html" title="Sketcher ConstrainSymmetric">Vazbu symetrie</a>.</li>
+<li>V&yacute;sledkem bude n&#283;co, co se podob&aacute; <b>Obr.: MS5</b>.</li></ol>
 <p><b>Step E: Assign a vertical distance constraint</b>
 </p>
 <dl><dd>Assign a vertical distance constraint following the same procedure as used for the previous horizontal distance constraint:</dd></dl>
@@ -403,12 +403,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120162217
+Cached time: 20260120162523
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.320 seconds
-Real time usage: 1.002 seconds
+CPU time usage: 0.299 seconds
+Real time usage: 0.455 seconds
 Preprocessor visited node count: 832/1000000
 Post&#8208;expand include size: 41803/2097152 bytes
 Template argument size: 11563/2097152 bytes
@@ -419,19 +419,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  173.473      1 -total
- 58.97%  102.290      1 Template:Sketcher_Tools_navi/cs
- 18.36%   31.857      1 Template:Userdocnavi/cs
-  8.55%   14.834      1 Template:PartDesign_Tools_navi/cs
-  5.42%    9.406      3 Template:Navigation_menu_2
-  3.95%    6.854      3 Template:CheckBox
-  2.25%    3.897      1 Template:TutorialInfo
-  1.58%    2.745     19 Template:Button
-  1.53%    2.661      7 Template:ComboBox
-  1.29%    2.238      5 Template:Clear
+100.00%   75.751      1 -total
+ 23.81%   18.035      1 Template:Sketcher_Tools_navi/cs
+ 18.85%   14.280      1 Template:PartDesign_Tools_navi/cs
+ 15.01%   11.368      1 Template:Userdocnavi/cs
+ 14.23%   10.780      3 Template:Navigation_menu_2
+  8.67%    6.568     19 Template:Button
+  7.36%    5.573      1 Template:TutorialInfo
+  5.95%    4.508      3 Template:CheckBox
+  5.89%    4.462      7 Template:ComboBox
+  3.99%    3.024      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120162216 and revision id 1741605. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120162522 and revision id 1741607. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
