--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -134,7 +134,7 @@
 <li>Vyberte <b>po&#269;&aacute;tek</b> n&aacute;&#269;rtu. Pozn&aacute;mka: po&#345;ad&iacute; v&yacute;b&#283;ru bod&#367; je d&#367;le&#382;it&eacute;.</li>
 <li>Klikn&#283;te na <span typeof="mw:File"><a href="../Sketcher_ConstrainSymmetric.html" title="Sketcher ConstrainSymmetric"><img src="../File/Sketcher_ConstrainSymmetric.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainSymmetric.html" title="Sketcher ConstrainSymmetric">Vazbu symetrie</a>.</li>
 <li>V&yacute;sledkem bude n&#283;co, co se podob&aacute; <b>Obr.: MS5</b>.</li></ol>
-<p><b>Step E: Assign a vertical distance constraint</b>
+<p><b>Krok E: P&#345;i&#345;azen&iacute; vazby vertik&aacute;ln&iacute; vzd&aacute;lenosti</b>
 </p>
 <dl><dd>Assign a vertical distance constraint following the same procedure as used for the previous horizontal distance constraint:</dd></dl>
 <ol><li>Select the line defined by <b>P3</b> and <b>P4</b> in <b>Fig: MS3</b>.</li>
@@ -403,12 +403,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120162523
+Cached time: 20260120162715
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.299 seconds
-Real time usage: 0.455 seconds
+CPU time usage: 0.295 seconds
+Real time usage: 1.215 seconds
 Preprocessor visited node count: 832/1000000
 Post&#8208;expand include size: 41803/2097152 bytes
 Template argument size: 11563/2097152 bytes
@@ -419,19 +419,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   75.751      1 -total
- 23.81%   18.035      1 Template:Sketcher_Tools_navi/cs
- 18.85%   14.280      1 Template:PartDesign_Tools_navi/cs
- 15.01%   11.368      1 Template:Userdocnavi/cs
- 14.23%   10.780      3 Template:Navigation_menu_2
-  8.67%    6.568     19 Template:Button
-  7.36%    5.573      1 Template:TutorialInfo
-  5.95%    4.508      3 Template:CheckBox
-  5.89%    4.462      7 Template:ComboBox
-  3.99%    3.024      5 Template:Clear
+100.00%  168.599      1 -total
+ 21.97%   37.048      1 Template:Userdocnavi/cs
+ 14.49%   24.436      1 Template:PartDesign_Tools_navi/cs
+ 12.35%   20.818      1 Template:Sketcher_Tools_navi/cs
+ 10.28%   17.334      1 Template:TutorialInfo
+  7.16%   12.065     19 Template:Button
+  6.37%   10.736      7 Template:ComboBox
+  6.13%   10.332      3 Template:Navigation_menu_2
+  5.18%    8.736      1 Template:Version
+  4.87%    8.217      8 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120162522 and revision id 1741607. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120162713 and revision id 1741609. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
