--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -136,7 +136,7 @@
 <li>V&yacute;sledkem bude n&#283;co, co se podob&aacute; <b>Obr.: MS5</b>.</li></ol>
 <p><b>Krok E: P&#345;i&#345;azen&iacute; vazby vertik&aacute;ln&iacute; vzd&aacute;lenosti</b>
 </p>
-<dl><dd>Assign a vertical distance constraint following the same procedure as used for the previous horizontal distance constraint:</dd></dl>
+<dl><dd>P&#345;i&#345;a&#271;te vazbu vertik&aacute;ln&iacute; vzd&aacute;lenosti stejn&yacute;m postupem, jak&yacute; byl pou&#382;it pro p&#345;edchoz&iacute; vazbu horizont&aacute;ln&iacute; vzd&aacute;lenosti:</dd></dl>
 <ol><li>Select the line defined by <b>P3</b> and <b>P4</b> in <b>Fig: MS3</b>.</li>
 <li>Click <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">Vertical distance constraint</a>:
 <ol><li>Assign <b>Length = 26 mm</b></li>
@@ -403,12 +403,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120162715
+Cached time: 20260120162811
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.295 seconds
-Real time usage: 1.215 seconds
+CPU time usage: 0.316 seconds
+Real time usage: 0.466 seconds
 Preprocessor visited node count: 832/1000000
 Post&#8208;expand include size: 41803/2097152 bytes
 Template argument size: 11563/2097152 bytes
@@ -419,19 +419,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  168.599      1 -total
- 21.97%   37.048      1 Template:Userdocnavi/cs
- 14.49%   24.436      1 Template:PartDesign_Tools_navi/cs
- 12.35%   20.818      1 Template:Sketcher_Tools_navi/cs
- 10.28%   17.334      1 Template:TutorialInfo
-  7.16%   12.065     19 Template:Button
-  6.37%   10.736      7 Template:ComboBox
-  6.13%   10.332      3 Template:Navigation_menu_2
-  5.18%    8.736      1 Template:Version
-  4.87%    8.217      8 Template:KEY
+100.00%   53.108      1 -total
+ 19.84%   10.538      1 Template:Sketcher_Tools_navi/cs
+ 19.29%   10.244      1 Template:PartDesign_Tools_navi/cs
+ 17.33%    9.203      3 Template:Navigation_menu_2
+ 15.35%    8.152      1 Template:Userdocnavi/cs
+  7.91%    4.202      1 Template:TutorialInfo
+  7.18%    3.812      3 Template:CheckBox
+  5.81%    3.083     19 Template:Button
+  5.38%    2.857      5 Template:Clear
+  5.27%    2.800      7 Template:ComboBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120162713 and revision id 1741609. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120162811 and revision id 1741611. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
