--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -137,16 +137,16 @@
 <p><b>Krok E: P&#345;i&#345;azen&iacute; vazby vertik&aacute;ln&iacute; vzd&aacute;lenosti</b>
 </p>
 <dl><dd>P&#345;i&#345;a&#271;te vazbu vertik&aacute;ln&iacute; vzd&aacute;lenosti stejn&yacute;m postupem, jak&yacute; byl pou&#382;it pro p&#345;edchoz&iacute; vazbu horizont&aacute;ln&iacute; vzd&aacute;lenosti:</dd></dl>
-<ol><li>Select the line defined by <b>P3</b> and <b>P4</b> in <b>Fig: MS3</b>.</li>
-<li>Click <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">Vertical distance constraint</a>:
-<ol><li>Assign <b>Length = 26 mm</b></li>
-<li>Assign <b>Name = width</b>.</li>
-<li>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
-<li>The result should resemble <b>Fig: MS6</b>.</li>
-<li>The sketch is fully constrained now:
-<ul><li>The lines in the sketch are bright green.</li>
-<li>The <b>Solver messages</b> section of the task panel displays <b>Fully constrained</b>.</li>
-<li>If you select any line or vertex of the sketch and try to drag it, it won't move.</li></ul></li></ol>
+<ol><li>Vyberte linii definovanou body <b>P3</b> a <b>P4</b> podle <b>Obr.: MS3</b>.</li>
+<li>Klikn&#283;te na <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">Vazbu vertik&aacute;ln&iacute; vzd&aacute;lenosti</a>:
+<ol><li>P&#345;i&#345;a&#271;te <b>D&eacute;lka = 26 mm</b></li>
+<li>P&#345;i&#345;a&#271;te <b>N&aacute;zev = v&yacute;&scaron;ka</b>.</li>
+<li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
+<li>V&yacute;sledek by m&#283;l vypadat takto <b>Obr.: MS6</b>.</li>
+<li>N&aacute;&#269;rt je nyn&iacute; zcela zavazben:
+<ul><li>Linie na n&aacute;&#269;rtu jsou jasn&#283; zelen&eacute;.</li>
+<li>V &#269;&aacute;sti <b>Zpr&aacute;vy &#345;e&scaron;itele</b> na panelu &uacute;kol&#367; se zobrazuje <b>Pln&#283; zavazbeno</b>.</li>
+<li>Pokud vyberete libovolnou linii nebo vrchol n&aacute;&#269;rtu a pokus&iacute;te se ho p&#345;et&aacute;hnout, nepohne se.</li></ul></li></ol>
 <p><b>Step F: Close the sketch</b>
 </p>
 <dl><dd>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Close</span> at the top of the <a href="../Task_panel.html" class="mw-redirect" title="Task panel">tasks panel</a> to leave sketch edit mode.</dd></dl>
@@ -403,12 +403,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120162811
+Cached time: 20260120164121
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.316 seconds
-Real time usage: 0.466 seconds
+CPU time usage: 0.302 seconds
+Real time usage: 1.286 seconds
 Preprocessor visited node count: 832/1000000
 Post&#8208;expand include size: 41803/2097152 bytes
 Template argument size: 11563/2097152 bytes
@@ -419,19 +419,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   53.108      1 -total
- 19.84%   10.538      1 Template:Sketcher_Tools_navi/cs
- 19.29%   10.244      1 Template:PartDesign_Tools_navi/cs
- 17.33%    9.203      3 Template:Navigation_menu_2
- 15.35%    8.152      1 Template:Userdocnavi/cs
-  7.91%    4.202      1 Template:TutorialInfo
-  7.18%    3.812      3 Template:CheckBox
-  5.81%    3.083     19 Template:Button
-  5.38%    2.857      5 Template:Clear
-  5.27%    2.800      7 Template:ComboBox
+100.00%  113.941      1 -total
+ 26.41%   30.091      1 Template:Sketcher_Tools_navi/cs
+ 22.48%   25.613      3 Template:Navigation_menu_2
+ 13.66%   15.564      1 Template:PartDesign_Tools_navi/cs
+ 11.36%   12.945      3 Template:CheckBox
+ 11.24%   12.808      1 Template:Version
+ 11.18%   12.743      8 Template:KEY
+  8.20%    9.338      1 Template:Userdocnavi/cs
+  4.34%    4.949      7 Template:ComboBox
+  3.88%    4.419      1 Template:TutorialInfo
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120162811 and revision id 1741611. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120164120 and revision id 1741613. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
