--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -151,7 +151,9 @@
 </p>
 <dl><dd>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Zav&#345;&iacute;t</span> v horn&iacute; &#269;&aacute;sti <a href="../Task_panel.html" class="mw-redirect" title="Task panel">panelu &uacute;kol&#367;</a> pro opu&scaron;t&#283;n&iacute; re&#382;imu &uacute;prav n&aacute;&#269;rtu.</dd></dl>
 <div style="clear:both"></div>
-<h2><span class="mw-headline" id="Main_profile">Main profile</span></h2>
+<p><span id="Main_profile"></span>
+</p>
+<h2><span id="Hlavn.C3.AD_profil"></span><span class="mw-headline" id="Hlavn&iacute;_profil">Hlavn&iacute; profil</span></h2>
 <p>The main profile is created by <a href="../PartDesign_Pad.html" title="PartDesign Pad">padding</a> a new sketch.
 </p><p><b><big>Sketch001</big></b>
 </p>
@@ -403,13 +405,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120164233
+Cached time: 20260120164306
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.264 seconds
-Real time usage: 0.502 seconds
-Preprocessor visited node count: 832/1000000
+CPU time usage: 0.244 seconds
+Real time usage: 0.372 seconds
+Preprocessor visited node count: 833/1000000
 Post&#8208;expand include size: 41806/2097152 bytes
 Template argument size: 11566/2097152 bytes
 Highest expansion depth: 5/100
@@ -419,19 +421,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   85.344      1 -total
- 30.14%   25.719      1 Template:Sketcher_Tools_navi/cs
- 27.70%   23.640      3 Template:Navigation_menu_2
- 19.03%   16.243      1 Template:PartDesign_Tools_navi/cs
- 10.86%    9.267      1 Template:Userdocnavi/cs
-  6.94%    5.923      3 Template:CheckBox
-  5.71%    4.876      8 Template:KEY
-  5.29%    4.513      1 Template:TutorialInfo
-  4.84%    4.134      7 Template:ComboBox
-  4.46%    3.808     19 Template:Button
+100.00%   45.368      1 -total
+ 22.72%   10.307      3 Template:Navigation_menu_2
+ 19.46%    8.827      1 Template:Sketcher_Tools_navi/cs
+ 19.18%    8.700      1 Template:PartDesign_Tools_navi/cs
+ 13.99%    6.347      1 Template:Userdocnavi/cs
+  7.49%    3.398      3 Template:CheckBox
+  6.21%    2.816      1 Template:TutorialInfo
+  5.78%    2.622      7 Template:ComboBox
+  5.43%    2.465     19 Template:Button
+  5.03%    2.282      8 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120164232 and revision id 1741617. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120164306 and revision id 1741619. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
