--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -154,7 +154,7 @@
 <p><span id="Main_profile"></span>
 </p>
 <h2><span id="Hlavn.C3.AD_profil"></span><span class="mw-headline" id="Hlavn&iacute;_profil">Hlavn&iacute; profil</span></h2>
-<p>The main profile is created by <a href="../PartDesign_Pad.html" title="PartDesign Pad">padding</a> a new sketch.
+<p>Hlavn&iacute; profil se vytvo&#345;&iacute; pomoc&iacute; <a href="../PartDesign_Pad.html" title="PartDesign Pad">Desky</a> nov&eacute;ho n&aacute;&#269;rtu.
 </p><p><b><big>Sketch001</big></b>
 </p>
 <figure class="mw-halign-right" typeof="mw:File/Thumb"><a href="../index.php?title=OffsetSketch001.png&amp;filetimestamp=20221114205344&amp;.html" class="mw-file-description"><img src="../File/OffsetSketch001.png" decoding="async" width="240" height="270" class="mw-file-element" data-file-width="265" data-file-height="298"></a><figcaption>Fig. MP1</figcaption></figure>
@@ -405,12 +405,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120164306
+Cached time: 20260120164400
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.244 seconds
-Real time usage: 0.372 seconds
+CPU time usage: 0.293 seconds
+Real time usage: 0.439 seconds
 Preprocessor visited node count: 833/1000000
 Post&#8208;expand include size: 41806/2097152 bytes
 Template argument size: 11566/2097152 bytes
@@ -421,19 +421,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.368      1 -total
- 22.72%   10.307      3 Template:Navigation_menu_2
- 19.46%    8.827      1 Template:Sketcher_Tools_navi/cs
- 19.18%    8.700      1 Template:PartDesign_Tools_navi/cs
- 13.99%    6.347      1 Template:Userdocnavi/cs
-  7.49%    3.398      3 Template:CheckBox
-  6.21%    2.816      1 Template:TutorialInfo
-  5.78%    2.622      7 Template:ComboBox
-  5.43%    2.465     19 Template:Button
-  5.03%    2.282      8 Template:KEY
+100.00%   44.986      1 -total
+ 22.15%    9.963      1 Template:PartDesign_Tools_navi/cs
+ 16.48%    7.413      3 Template:Navigation_menu_2
+ 15.53%    6.988      1 Template:Sketcher_Tools_navi/cs
+ 11.00%    4.949      1 Template:Userdocnavi/cs
+ 10.17%    4.577      3 Template:CheckBox
+  7.84%    3.526      1 Template:TutorialInfo
+  7.32%    3.292      7 Template:ComboBox
+  5.26%    2.366     19 Template:Button
+  5.24%    2.356      8 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120164306 and revision id 1741619. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120164359 and revision id 1741621. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
