--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -162,7 +162,7 @@
 <p><b>Krok A: Vytvo&#345;en&iacute; n&aacute;&#269;rtku</b>
 </p>
 <dl><dd>Klikn&#283;te na <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Vytvo&#345;it n&aacute;&#269;rt</a> a vytvo&#345;te n&aacute;&#269;rt p&#345;ipojen&yacute; k <b>Rovin&#283;_YZ</b>. FreeCAD mu p&#345;i&#345;ad&iacute; n&aacute;zev <b>Sketch001</b>.</dd></dl>
-<p><b>Step B: Add geometry</b>
+<p><b>Krok B: P&#345;id&aacute;n&iacute; geometrie</b>
 </p>
 <ol><li>Click <span typeof="mw:File"><a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline"><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">Create polyline</a> and make a shape like in <b>Fig: MP1</b>.</li>
 <li>For the last point of the final segment make sure to pick the first point of the shape. The point will change color and you will see the symbol for a <span typeof="mw:File"><a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident"><img src="../File/Sketcher_ConstrainCoincident.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">Coincident constraint</a> appear near the cursor. Coincident constraints have to be explicit. Just having two points visually coincident is not sufficient.</li>
@@ -405,12 +405,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120164737
+Cached time: 20260120164800
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.282 seconds
-Real time usage: 0.498 seconds
+CPU time usage: 0.273 seconds
+Real time usage: 0.531 seconds
 Preprocessor visited node count: 833/1000000
 Post&#8208;expand include size: 41806/2097152 bytes
 Template argument size: 11566/2097152 bytes
@@ -421,19 +421,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   84.778      1 -total
- 25.33%   21.473      1 Template:Sketcher_Tools_navi/cs
- 17.71%   15.011      1 Template:Userdocnavi/cs
- 17.31%   14.678      1 Template:PartDesign_Tools_navi/cs
- 10.86%    9.210      3 Template:Navigation_menu_2
-  6.76%    5.732      3 Template:CheckBox
-  5.60%    4.748      7 Template:ComboBox
-  5.59%    4.739      1 Template:TutorialInfo
-  4.60%    3.897      5 Template:Clear
-  3.95%    3.353      1 Template:Version
+100.00%   69.661      1 -total
+ 22.44%   15.630      1 Template:PartDesign_Tools_navi/cs
+ 20.69%   14.413      3 Template:Navigation_menu_2
+ 19.65%   13.687      1 Template:Sketcher_Tools_navi/cs
+ 17.24%   12.012      1 Template:Userdocnavi/cs
+  7.02%    4.887      5 Template:Clear
+  5.70%    3.972      7 Template:ComboBox
+  5.57%    3.881      1 Template:Version
+  4.06%    2.825      3 Template:CheckBox
+  3.83%    2.668      1 Template:TutorialInfo
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120164736 and revision id 1741626. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120164800 and revision id 1741628. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
